/*
 * Copyright (c) 2024 Alan Littleford.  All rights reserved worldwide.
 *
 * THE  SOFTWARE IS  PROVIDED  "AS  IS", WITHOUT  WARRANTY  OF ANY  KIND,
 * EXPRESS OR  IMPLIED, INCLUDING  BUT NOT LIMITED  TO THE  WARRANTIES OF
 * MERCHANTABILITY,    FITNESS    FOR    A   PARTICULAR    PURPOSE    AND
 * NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
 * LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
 * OF CONTRACT, TORT OR OTHERWISE,  ARISING FROM, OUT OF OR IN CONNECTION
 * WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 */

plugins {
    id 'groovy'
    id 'maven-publish'
    id 'java-library'
}

group 'com.mentalresonance'
version '1.0.3'

repositories {
    mavenLocal()
    mavenCentral()
    // Needed to get spock snapshot below
    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}


dependencies {
    implementation 'org.glassfish.tyrus:tyrus-container-jdk-client:2.1.3'

    // This version for Java 21
    annotationProcessor 'org.projectlombok:lombok:1.18.30'
    // This version for Java 21
    testImplementation platform("org.spockframework:spock-bom:2.4-groovy-4.0-SNAPSHOT")
    testImplementation 'org.spockframework:spock-core'
    testImplementation 'org.projectlombok:lombok:1.18.30'


    testImplementation 'org.slf4j:slf4j-simple:2.0.7'
    // This version for Java 21
    compileOnly 'org.projectlombok:lombok:1.18.30'
    compileOnly 'com.squareup.okhttp3:okhttp-urlconnection:4.12.0'
    compileOnly 'com.squareup.okhttp3:okhttp-sse:4.12.0'

    implementation 'org.slf4j:slf4j-simple:2.0.7'

    implementation 'com.google.code.gson:gson:2.10.1'

    api 'com.mentalresonance:dust-core:1.0.3'

    api 'com.squareup.okhttp3:okhttp:4.12.0'
    api 'com.squareup.okhttp3:okhttp-sse:4.12.0'
    implementation("com.squareup.okhttp3:logging-interceptor:4.12.0")
    api 'com.squareup.okhttp3:okhttp-urlconnection:4.12.0'

    // Websocket
    api 'javax.websocket:javax.websocket-api:1.1'
    // This is the only version of Tyrus I can get to work
    api 'org.glassfish.tyrus.bundles:tyrus-standalone-client:1.21'
    compileOnly 'org.apache.groovy:groovy-all:4.0.12'

}


test {
    useJUnitPlatform()
    jvmArgs([
        '-Xmx32g',
        '--add-opens=java.base/java.lang=ALL-UNNAMED',
        '--add-opens=java.base/java.math=ALL-UNNAMED',
        '--add-opens=java.base/java.util=ALL-UNNAMED',
        '--add-opens=java.base/java.util.concurrent=ALL-UNNAMED',
        '--add-opens=java.base/java.net=ALL-UNNAMED',
        '--add-opens=java.base/java.text=ALL-UNNAMED',
        '--add-opens=java.sql/java.sql=ALL-UNNAMED',
    ])

}


publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }
}

javadoc.options {
    addStringOption('-release', '21')
}

tasks.withType(JavaCompile).each {
    // it.options.compilerArgs.add('-Xlint:preview')
}

tasks.withType(GroovyCompile).each {
}

java {
    withSourcesJar()
}